--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -62,6 +62,7 @@ jobs:
           "APP_NAME=$repo" | Out-File $env:GITHUB_ENV -Append
 
       - name: Build EXE with PyOxidizer
+        working-directory: ${{ github.workspace }}
         run: |
           pyoxidizer build --release
           echo "Build output:"
