--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,4 +1,4 @@
-name: Windows EXE (PyOxidizer)
+name: Windows EXE (Nuitka)
 
 on:
   push:
@@ -30,53 +30,39 @@ jobs:
 
     steps:
       # ------------------------------------------------------------
-      # 1) CHECKOUT COMPLETO (inclui arquivos .bzl)
+      # CHECKOUT COMPLETO
       # ------------------------------------------------------------
-      - name: Checkout repository (FULL)
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          clean: false
-      # ------------------------------------------------------------
-      # 2) Mostrar estrutura (debug opcional)
-      # ------------------------------------------------------------
-      - name: Show structure
-        shell: pwsh
-        run: |
-          Write-Host "=== WORKSPACE ==="
-          Write-Host "${{ github.workspace }}"
-          Write-Host "=== ROOT LISTING ==="
-          Get-ChildItem -Force
-
-          Write-Host "=== SEARCH pyoxidizer.bzl ==="
-          Get-ChildItem -Recurse -Force -Filter "*.bzl" | ForEach-Object {
-            Write-Host "FOUND: $($_.FullName)"
-          }
 
       # ------------------------------------------------------------
-      # 3) Instalar Rust (requisito do PyOxidizer)
+      # INSTALA O MSVC (REQUIRED)
       # ------------------------------------------------------------
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install Visual Studio Build Tools
+        uses: microsoft/setup-msbuild@v2
 
       # ------------------------------------------------------------
-      # 4) Setup Python
+      # SETUP PYTHON
       # ------------------------------------------------------------
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       # ------------------------------------------------------------
-      # 5) Instalar PyOxidizer
+      # INSTALAR DEPENDÊNCIAS E NUITKA
       # ------------------------------------------------------------
-      - name: Install PyOxidizer
+      - name: Install dependencies
         shell: pwsh
         run: |
-          pip install pyoxidizer
+          python -m pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt
+          pip install nuitka ordered-set zstandard
 
       # ------------------------------------------------------------
-      # 6) Calcular versão
+      # DEFINIR VERSÃO E NOME DO APP
       # ------------------------------------------------------------
       - name: Compute version and names
         shell: pwsh
@@ -94,70 +80,71 @@ jobs:
           "APP_VER=$ver" | Out-File $env:GITHUB_ENV -Append
           $repo = "${{ github.repository }}".Split("/")[1]
           "APP_NAME=$repo" | Out-File $env:GITHUB_ENV -Append
+          Write-Host "APP_VER=$ver | APP_NAME=$repo"
 
-          
-      - name: Debug assets and db
-        working-directory: ${{ github.workspace }}
+      # ------------------------------------------------------------
+      # DEBUG OPCIONAL (listar pastas)
+      # ------------------------------------------------------------
+      - name: Debug project tree
         shell: pwsh
         run: |
-          Write-Host "=== LISTANDO assets ==="
-          if (Test-Path "assets") {
-            Get-ChildItem -Force assets
-          } else {
-            Write-Host "assets NAO existe"
-          }
-
-          Write-Host "=== LISTANDO db ==="
-          if (Test-Path "db") {
-            Get-ChildItem -Force db
-          } else {
-            Write-Host "db NAO existe"
-          }
+          Write-Host "=== RAIZ DO PROJETO ==="
+          Get-ChildItem -Force
+          Write-Host "`n=== assets ==="
+          Get-ChildItem -Force assets
+          Write-Host "`n=== db ==="
+          Get-ChildItem -Force db
 
       # ------------------------------------------------------------
-      # 7) Compilar com PyOxidizer
+      # BUILD NUITKA
       # ------------------------------------------------------------
-      - name: Build EXE with PyOxidizer
-        working-directory: ${{ github.workspace }}
+      - name: Build EXE with Nuitka
         shell: pwsh
         run: |
-          Write-Host "=== RUNNING PYOXIDIZER ==="
-          pyoxidizer build --release
+          $name = "${{ env.APP_NAME }}-${{ env.APP_VER }}"
 
-          Write-Host "=== BUILD DIRECTORY ==="
-          Get-ChildItem -Recurse "build" | Format-Table -AutoSize
+          python -m nuitka `
+            --onefile `
+            --standalone `
+            --enable-plugin=tk-inter `
+            --windows-icon-from-ico=assets/app.ico `
+            --include-data-dir=db=db `
+            --assume-yes-for-downloads `
+            --remove-output `
+            --output-dir=dist `
+            --windows-disable-console `
+            main.py
+
+          Write-Host "Conteúdo de dist/:"
+          Get-ChildItem dist -Recurse
 
       # ------------------------------------------------------------
-      # 8) Copiar EXE final
+      # RENOMEAR O EXE FINAL
       # ------------------------------------------------------------
-      - name: Locate final EXE
-        working-directory: ${{ github.workspace }}
+      - name: Rename final EXE
         shell: pwsh
         run: |
-          $exe = Get-ChildItem -Recurse "build\windows\x86_64\release" -Filter "*.exe" | Select-Object -First 1
+          $exe = Get-ChildItem -Recurse "dist" -Filter "*.exe" | Select-Object -First 1
+          if (-not $exe) { throw "Nenhum EXE encontrado!" }
 
-          if (-not $exe) {
-            throw "Nenhum EXE encontrado!"
-          }
-
-          New-Item -ItemType Directory -Force -Path dist | Out-Null
-          $dest = "dist/${{ env.APP_NAME }}-${{ env.APP_VER }}.exe"
-          Copy-Item $exe.FullName $dest -Force
-          Write-Host "EXE Final: $dest"
+          $target = "dist/${{ env.APP_NAME }}-${{ env.APP_VER }}.exe"
+          Move-Item $exe.FullName $target -Force
+          Write-Host "EXE Final: $target"
 
       # ------------------------------------------------------------
-      # 9) Upload artefato
+      # ARTEFATO
       # ------------------------------------------------------------
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-${{ env.APP_VER }}-win
           path: dist/*.exe
+          if-no-files-found: error
 
       # ------------------------------------------------------------
-      # 10) Publish Release
+      # PUBLICAR RELEASE
       # ------------------------------------------------------------
-      - name: Publish GitHub Release
+      - name: Publish Release
         if: ${{ startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && inputs.publish_release) }}
         uses: softprops/action-gh-release@v2
         with:
