--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -30,7 +30,7 @@ jobs:
 
     steps:
       # ------------------------------------------------------------
-      # CHECKOUT COMPLETO
+      # CHECKOUT
       # ------------------------------------------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -38,13 +38,13 @@ jobs:
           fetch-depth: 0
 
       # ------------------------------------------------------------
-      # INSTALA O MSVC (REQUIRED)
+      # MSVC
       # ------------------------------------------------------------
       - name: Install Visual Studio Build Tools
         uses: microsoft/setup-msbuild@v2
 
       # ------------------------------------------------------------
-      # SETUP PYTHON
+      # PYTHON
       # ------------------------------------------------------------
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -52,7 +52,7 @@ jobs:
           python-version: "3.10"
 
       # ------------------------------------------------------------
-      # INSTALAR DEPENDÊNCIAS E NUITKA
+      # DEPENDÊNCIAS E NUITKA
       # ------------------------------------------------------------
       - name: Install dependencies
         shell: pwsh
@@ -62,7 +62,7 @@ jobs:
           pip install nuitka ordered-set zstandard
 
       # ------------------------------------------------------------
-      # DEFINIR VERSÃO E NOME DO APP
+      # DEFINIR NOME E VERSÃO
       # ------------------------------------------------------------
       - name: Compute version and names
         shell: pwsh
@@ -79,19 +79,18 @@ jobs:
 
           "APP_VER=$ver" | Out-File $env:GITHUB_ENV -Append
 
-          # FIXO: nome do app
           $appName = "ProcessSimul"
           "APP_NAME=$appName" | Out-File $env:GITHUB_ENV -Append
 
           Write-Host "APP_VER=$ver | APP_NAME=$appName"
 
       # ------------------------------------------------------------
-      # DEBUG OPCIONAL (listar pastas)
+      # DEBUG (LISTAR RAIZ)
       # ------------------------------------------------------------
       - name: Debug project tree
         shell: pwsh
         run: |
-          Write-Host "=== RAIZ DO PROJETO ==="
+          Write-Host "=== ROOT ==="
           Get-ChildItem -Force
           Write-Host "`n=== assets ==="
           Get-ChildItem -Force assets
@@ -99,30 +98,30 @@ jobs:
           Get-ChildItem -Force db
 
       # ------------------------------------------------------------
-      # BUILD NUITKA
+      # BUILD NUITKA (STANDALONE, SEM ONEFILE)
       # ------------------------------------------------------------
-      - name: Build EXE with Nuitka
+      - name: Build EXE with Nuitka (Standalone)
         shell: pwsh
         run: |
           $name = "${{ env.APP_NAME }}-${{ env.APP_VER }}"
 
           python -m nuitka `
-            --onefile `
             --standalone `
             --enable-plugin=tk-inter `
+            --enable-plugin=tcl `
             --windows-icon-from-ico=assets/app.ico `
             --include-data-dir=db=db `
             --assume-yes-for-downloads `
             --remove-output `
             --output-dir=dist `
-            --windows-disable-console `
+            --windows-console-mode=force `
             main.py
 
           Write-Host "Conteúdo de dist/:"
           Get-ChildItem dist -Recurse
 
       # ------------------------------------------------------------
-      # RENOMEAR O EXE FINAL
+      # RENOMEAR BINÁRIO
       # ------------------------------------------------------------
       - name: Rename final EXE
         shell: pwsh
@@ -141,16 +140,16 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-${{ env.APP_VER }}-win
-          path: dist/*.exe
+          path: dist/**
           if-no-files-found: error
 
       # ------------------------------------------------------------
-      # PUBLICAR RELEASE
+      # RELEASE
       # ------------------------------------------------------------
       - name: Publish Release
         if: ${{ startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && inputs.publish_release) }}
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.APP_VER }}
-          files: dist/*.exe
+          files: dist/**
           generate_release_notes: true
