--- a/.github/workflows/windows-pyoxidizer.yml
+++ b/.github/workflows/windows-pyoxidizer.yml
@@ -19,7 +19,7 @@ on:
         type: boolean
 
 permissions:
-  contents: write  # necessário para criar tags e releases
+  contents: write
 
 jobs:
   build:
@@ -35,20 +35,20 @@ jobs:
           fetch-depth: 0
 
       # ------------------------------------------------------------
-      # COMPUTAR VERSÃO
+      # PREPARE VERSION
       # ------------------------------------------------------------
       - name: Prepare version
         shell: pwsh
         run: |
           $ver = "${{ inputs.version }}"
           "APP_VER=$ver" | Out-File -FilePath $env:GITHUB_ENV -Append
-          Write-Host "Versão: $ver"
+          Write-Host "Versão definida: $ver"
 
       # ------------------------------------------------------------
-      # CRIAR TAG SE SOLICITADO
+      # CREATE TAG IF REQUESTED
       # ------------------------------------------------------------
       - name: Create tag
-        if: ${{ inputs.tag_repository }}
+        if: ${{ inputs.tag_repository == true }}
         shell: bash
         run: |
           set -e
@@ -58,48 +58,65 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git tag -a "$VER" -m "Release $VER"
-          git push origin "$VER"
+          # Evitar falhar caso a tag já exista
+          if git rev-parse "$VER" >/dev/null 2>&1; then
+            echo "Tag já existe. Pulando criação."
+          else
+            git tag -a "$VER" -m "Release $VER"
+            git push origin "$VER"
+          fi
 
       # ------------------------------------------------------------
-      # INSTALAR RUST
+      # INSTALL PYTHON
+      # ------------------------------------------------------------
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      # ------------------------------------------------------------
+      # INSTALL RUST
       # ------------------------------------------------------------
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
       # ------------------------------------------------------------
-      # INSTALAR PyOxidizer
+      # INSTALL PyOxidizer
       # ------------------------------------------------------------
       - name: Install PyOxidizer
         shell: pwsh
         run: |
+          pip install --upgrade pip
           pip install pyoxidizer==0.24.0
 
       # ------------------------------------------------------------
-      # BUILD PyOxidizer
+      # BUILD EXE WITH PyOXIDIZER
       # ------------------------------------------------------------
       - name: Build EXE
         shell: pwsh
         run: |
-          pyoxidizer build --release --verbose
+          # PyOxidizer 0.24 recomenda:
+          #   pyoxidizer build
+          pyoxidizer build --release
 
       # ------------------------------------------------------------
-      # BUSCAR EXE FINAL
+      # COLLECT OUTPUT BINARY
       # ------------------------------------------------------------
       - name: Collect EXE
         shell: pwsh
         run: |
           $exe = Get-ChildItem -Recurse "build" -Filter "*.exe" | Select-Object -First 1
-          if (-not $exe) { throw "Nenhum EXE encontrado!" }
+          if (-not $exe) { throw "Nenhum EXE encontrado no diretório build!" }
 
           New-Item dist -ItemType Directory -Force | Out-Null
           $dest = "dist/ProcessSimul-${{ env.APP_VER }}.exe"
+
           Copy-Item $exe.FullName $dest -Force
 
-          Write-Host "EXE Final: $dest"
+          Write-Host "EXE Final gerado: $dest"
 
       # ------------------------------------------------------------
-      # ARTEFATO
+      # UPLOAD ARTIFACT
       # ------------------------------------------------------------
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -108,10 +125,10 @@ jobs:
           path: dist/*.exe
 
       # ------------------------------------------------------------
-      # CRIAR RELEASE SE SOLICITADO
+      # PUBLISH RELEASE IF REQUESTED
       # ------------------------------------------------------------
       - name: Publish GitHub Release
-        if: ${{ inputs.publish_release }}
+        if: ${{ inputs.publish_release == true }}
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.APP_VER }}
