--- a/.github/workflows/windows-pyoxidizer.yml
+++ b/.github/workflows/windows-pyoxidizer.yml
@@ -46,16 +46,16 @@ jobs:
       # ------------------------------------------------------------
       # DEBUG: LIST SOURCE TREE AND CHECK FILES
       #------------------------------------------------------------
-      - name: List source tree
+      - name: Check Project Structure
         shell: pwsh
         run: |
-          Write-Host "---- Current Directory ----"
+          Write-Host "===== CURRENT DIRECTORY ====="
           Write-Host (Get-Location)
 
-          Write-Host "---- Full Directory Tree ----"
+          Write-Host "===== FULL TREE ====="
           Get-ChildItem -Recurse | Select-Object FullName
 
-          Write-Host "---- Checking Required Files ----"
+          Write-Host "===== CHECK REQUIRED FILES ====="
 
           $files = @(
             "main.py",
@@ -65,9 +65,9 @@ jobs:
 
           foreach ($f in $files) {
             if (Test-Path $f) {
-              Write-Host "[OK] Encontrado: $f"
+              Write-Host "[OK] $f encontrado"
             } else {
-              Write-Host "[ERRO] NÃO encontrado: $f"
+              Write-Host "[ERRO] $f NÃO encontrado"
             }
           }
       # ------------------------------------------------------------
